fix alignment and made smaller

--- a/project 1 jeopardy/project1.css
+++ b/project 1 jeopardy/project1.css
@@ -2,29 +2,71 @@ p {
 	font-family: verdana;
 }
 body{
+	margin:0;
 	text-align:center;
 }
 h1 {
 	text-align:center;
 	font-size: 75px;
+	margin-bottom:5px;
+	margin-top:35px;
+}
+h2 {
+	text-align:center;
+	font-size: 60px;
 }
 
-
-table{
+table.visuals{
 	background-color:black;
-	font-size: 55px;
+	font-size: 50px;
+	margin-right:-100px;
+	float:left;
+	width:10px;
+	}
+	
+td.visuals{
+	height:30px;
+	padding-bottom:8px;
+	background-color:orange;
+	border-left: 20px solid #2874A6    ;
+	border-right: 20px solid #2874A6    ;
+	}
+td.top{
+	background-color:orange;
+	border-left: 20px solid #2874A6    ;
+	border-right: 20px solid #2874A6    ;
+	border-top: 20px solid #2874A6    ;
+	height:24px;
+
+	margin-bottom:0;
+	}
+td.bottom{
+	background-color:orange;
+	border-left: 20px solid #2874A6    ;
+	border-right: 20px solid #2874A6    ;
+	border-bottom: 20px solid #2874A6    ;
+
+	height:24px;
+	margin-top:0;
+	}
+	
+
+table.game{
+	background-color:black;
+	font-size: 45px;
     margin-left:auto; 
     margin-right:auto;
 }
-th{
+th.game{
 	color:white;
 	text-align:center;
 	background-color:blue;
 	padding:10px;
 	border: 15px solid black;
+	font-size: 30px;
 
 }
-td{
+td.game{
 	color:yellow;
 	text-align:center;
     font-weight: 900;
@@ -54,11 +96,16 @@ td.lastRow{
 }
 .fLeftb{
 	float: left;
-	margin: 60px;
+	margin-top:30px;
+	margin-bottom:30px;
+	margin-left: 88px;
+}
+.dwidth{
+	width:100px;
 }
 div.score{
 	height:100px;
-	width: 350px;
+	width: 280px;
 	border-style: double;
 	background-color:red;
 }
@@ -84,6 +131,81 @@ div.four{
 	margin-left:11px;
 	margin-top:8px;
 
-	width: 170px; 
 	font-size: 31px;
+}
+
+
+input.q{
+	height:70px;
+	width:220px;
+	color:yellow;
+	background-color:navy;
+	font-weight: 900;
+	font-size: 55px;
+	padding-bottom:80px;
+}
+input:hover {
+    background-color: white; /* Green */
+    color: black;
+}
+
+ul.nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+li.navE {
+    float: left;
+}
+li.navE a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+div.b{
+	visibility:hidden;
+}
+div.allscores{
+	    margin-left:auto; 
+    margin-right:auto;
+}
+#a:hover + #b {
+	visibility:visible;
+    /*background: #ccc*/
+}
+#container {
+    position:relative;
+    height:455px;
+    width:99.35%;
+    border:thick solid black;
+	background-color:grey;
+}
+#container div {
+    background:grey;
+    width:200px;
+}
+#left {
+    position:absolute;
+    left:0px;
+    bottom:0px;
+}
+#center {
+    position:relative;
+    margin-left:auto; 
+    margin-right:auto;
+    top:0px;
+}
+#right {
+    position:absolute;
+    right:0px;
+    bottom:0px;
+	margin-right:52px;
+
 }
